# luminaire

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
data/: Info.plist.in
docs/design-plans/: 2026-05-14-macos-support.md
docs/implementation-plans/2026-05-14-macos-support/: phase_01.md  phase_02.md  phase_03.md  test-requirements.md
docs/test-plans/: 2026-05-14-macos-support.md
scripts/: install-user.sh  uninstall-user.sh
src/: Config.cpp  Config.h  KeyLightAPI.cpp  KeyLightAPI.h  MainWindow.cpp  MainWindow.h  index.html  main.cpp  main.js  style.css
src-tauri/: Cargo.toml  Info.plist  luminaire.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  commands.rs  config.rs  icon.rs  keylight.rs  lib.rs  main.rs  tray.rs  tray_linux.rs  tray_macos.rs
