[package]
name = "luminaire"
version = "1.0.0"
description = "Control Elgato Key Light Neo"
authors = ["Luminaire"]
edition = "2021"

[lib]
name = "luminaire_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
directories = "5"
toml = "0.8"
anyhow = "1"

# Platform-specific tray dependencies
[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
